css/mm-components-public.css
/**
 * Component Styles.
 *
 * @since 1.0.0
 *
 * @package mm-components
 */

/**
 * Global Styles
 */

.mm-text-align-left {
	text-align: left;
}

.mm-text-align-center {
	text-align: center;
}

.mm-text-align-justify {
	text-align: justify;
}

.mm-text-align-right {
	text-align: right;
}

/**
 * Individual Component Styles
 */

/**
 * Countdown
 */
.mm-countdown .unit {
	display: inline-block;
	margin-right: 1em;
	margin-bottom: 0;
	text-align: center;
}

.mm-countdown .count,
.mm-countdown .label {
	display: block;
}

.mm-countdown .count {
	font-size: 30px;
	font-weight: bold;
}

@media (min-width: 350px) {

	.mm-countdown .unit:last-child {
		margin-right: 0;
	}
}

/**
 * Expandable Content
 */
.mm-expandable-content-trigger:hover {
	cursor: pointer;
}

.mm-expandable-content-target {
	display: none;
}

/**
 * Icon Box
 */
.mm-icon-box {
	position: relative;
	margin-top: 5em;
	padding: 6em 20px 20px 20px;
	border: 1px solid #d6dfe8;
}

.mm-icon-box .mm-icon {
	position: absolute;
	top: -1em;
	left: 50%;
	width: 2em;
	height: 2em;
	margin-left: -1em;
	background-color: #fff;
	border: 1px solid #d6dfe8;
	border-radius: 100%;
	font-size: 4.2em;
	text-align: center;
	line-height: 2em;
}

/**
 * Image Grid
 */
.mm-image-grid {
	overflow: hidden;
}

.mm-image-grid.max-in-row-1 .mm-image-grid-image {
	width: 100%;
}

.mm-image-grid.max-in-row-2 .mm-image-grid-image {
	width: 50%;
}

.mm-image-grid.max-in-row-3 .mm-image-grid-image {
	width: 33.33%;
}

.mm-image-grid.max-in-row-4 .mm-image-grid-image {
	width: 25%;
}

.mm-image-grid.max-in-row-5 .mm-image-grid-image {
	width: 20%;
}

.mm-image-grid.max-in-row-6 .mm-image-grid-image {
	width: 16.65%;
}

.mm-image-grid-image {
	text-align: center;
	float: left;
}

.mm-image-grid-image a,
.mm-image-grid-image img {
	display: block;
}

.mm-image-grid-image .caption {
	margin-top: 10px;
}

/**
 * Logo Strip
 */
.mm-logo-strip {
	text-align: center;
}

.mm-logo-strip .logo {
	display: inline-block;
	padding: 0 15px 15px;
}

.mm-logo-strip .logo img {
	display: block;
}

/**
 * Posts
 */
.mm-posts .entry-image {
	max-width: 150px;
	float: left;
	margin: 0 15px 12px 0;
}

.mm-posts .entry-image a,
.mm-posts .entry-image a img {
	display: block;
}

.mm-posts .entry-image a {
	opacity: 1;
	-webkit-transition: opacity 0.2s;
	transition: opacity 0.2s;
}

.mm-posts .entry-image a:hover {
	opacity: 0.85;
}

.mm-posts .entry-meta-wrap {
	clear: both;
}

/**
 * Posts Templates
 */

/* Simple List */
.mm-posts.simple-list .mm-post {
	padding: 0;
	margin: 0 0 10px;
}

.mm-posts.simple-list .entry-title,
.mm-posts.simple-list p {
	display: inline;
}

.mm-posts.simple-list .entry-title {
	font-size: 20px;
	margin-right: 5px;
}

.mm-posts.simple-list .entry-info-wrap {
	font-size: 16px;
	font-style: italic;
}

.mm-posts.simple-list .entry-comments-link,
.mm-posts.simple-list .post-edit-link {
	display: none;
}

/* Image Grid */
.mm-posts.image-grid::after {
	content: '';
	display: table;
	clear: both;
}

.mm-posts.image-grid .mm-post {
	float: left;
	width: 100%;
	margin-bottom: 10px;
	position: relative;
}

.mm-posts.image-grid .entry-image {
	width: 100%;
	max-width: 100%;
	margin-bottom: 10px;
	margin-right: 0;
}

.mm-posts.image-grid .entry-title {
	line-height: 1.2;
	font-size: 20px;
	float: left;
}

.mm-posts.image-grid.titles-inside .mm-post {
	margin-bottom: 0;
}

.mm-posts.image-grid.titles-inside .entry-image {
	margin-bottom: 18px;
}

.mm-posts.image-grid.titles-inside .entry-title {
	position: absolute;
	bottom: 0;
	margin-bottom: 18px;
	padding: 16px 10px;
	pointer-events: none;
}

.mm-posts.image-grid.titles-inside .entry-title a {
	color: #fff;
}

@media (min-width: 768px) {

	.mm-posts.image-grid .mm-post {
		width: 49%;
		margin-right: 2%;
		margin-bottom: 0px;
	}

	.mm-posts.image-grid .mm-post:nth-child( 2n ) {
		margin-right: 0;
	}
}

